fix: :fire: fixed the bug where the snippt was causing overflow

--- a/styles/scss/spin.scss
+++ b/styles/scss/spin.scss
@@ -14,5 +14,8 @@
     }
     body {
         scrollbar-color: #0003f9 #00c00d;
+        img {
+            image-rendering: optimizeQuality;
+        }
     }
 }
